# clickup-tools

./: .gitignore  ADR-001-type-safety-fixes.md  ADR-002-default-lists-feature.md  AGENT.md  CLAUDE.md  GEMINI.md  PRD.md  README.md  fix_config.py  justfile  pyproject.toml
.github/workflows/: test.yml
clickup/: __init__.py
clickup/cli/: __init__.py  main.py  utils.py
clickup/cli/commands/: bulk.py  config.py  discover.py  list.py  setup.py  task.py  templates.py  workspace.py
clickup/core/: __init__.py  client.py  config.py  exceptions.py  models.py
clickup/mcp/: __init__.py  server.py
examples/: cli_usage.md  mcp_usage.md
tests/: __init__.py  conftest.py
tests/integration/: test_bulk_operations.py  test_cli_commands.py  test_cli_commands.py.backup  test_discovery_commands.py  test_list_commands.py  test_mcp_server.py  test_setup_commands.py  test_task_commands.py  test_template_commands.py  test_workspace_commands.py
tests/live/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_hierarchy.py  test_tasks.py  test_workspaces.py
tests/unit/: test_cli_config.py  test_config_advanced.py  test_core_client.py  test_core_client_extended.py  test_core_config.py  test_core_models.py  test_dotenv_loading.py  test_mcp_tools.py
